# stortrace

./: .gitignore  CMakeLists.txt  Env.hpp  README.en.md  README.md  SUMMARY.md  blk_trace_config.json  block_trace.bpf.c  block_trace.h  block_trace.hpp  block_trace_log.hpp  collector.hpp  common.h  common_bpf.h  common_um.h  digestible.h  ext4_dio_info.bpf.c  ext4_dio_info.h  ext4_dio_info.hpp  ext4_dio_info_log.h  ext4_dio_simple.bpf.c  ext4_dio_simple.h  ext4_dio_simple.hpp  ext4_dio_simple_log.h  hctx_state.hpp  heatmap.hpp  logger.hpp  main.cpp  perfbuf-output.bpf.c  ringbuf-output.bpf.c  ringbuf-reserve-submit.bpf.c  stortrace_config.json  time_aq.hpp
_book/: index.html  search_index.json
_book/gitbook/: BPF_maps.html  BPF_program.html  BPF_ring_buffer.html  Building.html  Ext4_write.html  Getting_started.html  Libbpf_log.html  Locked_memory_limits.html  Prerequisites.html  SubModule.html  Trouble_shooting.html  Vfs_layer.html  write_pwrite64.html
_book/src/: ringbuf-output.bpf.c  ringbuf-output.c
cmake/: FindBpfObject.cmake
doc/: README.md  SUMMARY.md
doc/gitbook/: BPF_maps.md  BPF_program.md  Binary_version.md  Block_io_layer.md  Building.md  Config_setting.md  Direct_io_trace.md  Ext4_write.md  Fio_test.md  Fua.md  Getting_started.md  Libbpf_log.md  Locked_memory_limits.md  Log_record.md  NVME.md  Prerequisites.md  blk_trace.md  filter.md  mysql.md  write_pwrite64.md
gitbook/: BPF_ring_buffer.md  Getting_started.md  Prerequisites.md  SubModule.md  Trouble_shooting.md  Vfs_layer.md
src/: Makefile  perfbuf-output.bpf.c  perfbuf-output.c  ringbuf-reserve-submit.bpf.c  ringbuf-reserve-submit.c
vis/: server.py
vis/templates/: avg_with_mark.html  blk_trace.html  dio_info.html  dio_simple.html  dis_with_mark.html  drive_heatmap_list.html  func_event.html  hctx_busy.html  heatmap.html  index.html  latency info.html  latency.html  page_test.html  pmc_aq.html  record_bucket.html  record_time.html  rq_latency.html  test.html
